<resources>
    <string name="app_name">CARD.IO</string>

    <!--GENERAL-->
    <string name="stack">Stack</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_prescribe">Adicionar recomendação</string>
    <string name="btn_history">Ver Histórico</string>

    <!--MESSAGES-->
    <string name="message_error_field_empty">Todos os campos devem ser preenchidos</string>
    <string name="message_succes_register_user">Usuário cadastrado com sucesso!</string>
    <string name="message_error_register_user">Falha ao cadastrar usuário!</string>
    <string name="message_succes_register_general">Registro realizado com sucesso!</string>
    <string name="message_error_register_general">Falha ao registrar informação!</string>
    <string name="message_not_registred">Caso seja um paciente ainda não cadastrado entre em contato com seu profissional de saúde para que faça seu cadastro. \n Caso seja um profissional de saúde autorizado basta clicar em \"Ok\" e seguir com seu cadastro.</string>
    <string name="message_success_recomendation">Recomendação feita com sucesso!</string>
    <string name="message_error_recomendation">Falha ao enviar recomendação!</string>
    <string name="message_success_appointment">Consulta agendada com sucesso!</string>
    <string name="message_error_appointment">Erro ao agendar consulta</string>

    <!--THRESHOLD MESSAGES-->
    <string name="threshold_notification_title">Atenção!!</string>
    <string name="message_surpassed_liquid_threshold">Você extrapolou seu limite diário de ingestão de líquido. \n Procure um profissional de saúde</string>
    <string name="message_liquid_threshold">Você está se aproximando do seu limite diário de ingestão de líquido.</string>
    <string name="message_weight_threshold">Você teve uma alteração de peso significativa nos últimos dias. \n Procure um profissional de saúde</string>

    <!--MONITORING PERFORMED-->
    <string name="message_excercise_monitoring">Você ainda não cumpriu sua recomendação de exercício hoje!</string>
    <string name="message_weight_monitoring">Você ainda não cumpriu sua recomendação de dados biométricos hoje!</string>

    <!--MONITORING APPOINTMENT-->
    <string name="message_title_monitoring_appointment">%1$s no dia %2$s</string>
    <string name="message_content_monitoring_appointment">Você possui uma consulta com %1$s às %2$s em %3$s</string>

    <!--MONITORING MEDICATION-->
    <string name="message_title_monitoring_medication">%1$s</string>
    <string name="message_content_monitoring_medication">Você precisa consumir %1$s de %2$s de %3$s</string>

    <!--TELA LOGIN-->
    <string name="btn_login">Login</string>
    <string name="btn_register">Cadastrar</string>
    <string name="title_activity_login">Login</string>
    <string name="label_not_registred">Ainda não é cadastrado?</string>

    <!--TELA HOME-->
    <string name="weight_control_title">Como estou hoje</string>
    <string name="alimentation_title">Líquidos ingeridos</string>
    <string name="medicines_title">Medicações</string>
    <string name="medical_appointment_title">Consultas</string>
    <string name="exercises_title">Exercícios</string>
    <string name="about_title">Informações</string>
    <string name="oritation_title">Orientações</string>
    <string name="help_title">Dúvidas</string>

    <!--TELA PESAGEM-->
    <string name="weight_screen_title">Como eu estou hoje</string>
    <string name="label_weigth">Meu peso</string>
    <string name="weight_unit_label">kg</string>
    <string name="heartbeats_label">Meus batimentos</string>
    <string name="heartbeats_unit_label">bpm</string>
    <string name="pressure_label">Minha pressão arterial</string>
    <string name="pressure_unit_label">mmHg</string>
    <string name="swelling_rg_title">Inchaço</string>
    <string name="no_swelling_rg_opt">Nenhum inchaço</string>
    <string name="little_swelling_rg_opt">Pouco inchaço</string>
    <string name="medium_swelling_rg_opt">Inchaço médio</string>
    <string name="much_swelling_rg_opt">Muito inchaço</string>
    <string name="fatigue_rg_title">Fadiga</string>
    <string name="no_fatigue_rg_opt">Nenhuma fadiga</string>
    <string name="little_fatigue_rg_opt">Pouca fadiga</string>
    <string name="medium_fatigue_rg_opt">Fadiga média</string>
    <string name="much_fatigue_rg_opt">Muita fadiga</string>

    <!--TELA MEDICAMENTO-->
    <string name="register_medice_label">Cadastrar Medicamento</string>
    <string name="label_morning">Manhã</string>
    <string name="label_evening">Tarde</string>
    <string name="label_night">Noite</string>
    <string name="label_dawn">Madrugada</string>

    <!--TELA ALIMENTACAO-->
    <string name="alimentation_screen_title">Líquidos ingeridos</string>
    <string name="measure">Medida</string>
    <string name="glass">Um copo americano</string>
    <string name="half_glas">Meio copo americano</string>
    <string name="cup">Uma xícara</string>
    <string name="half_cup">Meia xícara</string>
    <string name="requeijao_glass">Um copo de requeijão</string>
    <string name="half_requeijao_glass">Meio copo de requeijão</string>
    <string name="chalice">Um cálice</string>

    <string name="quantidade">Quantidade</string>
    <string name="quantidade_maxima">Quantidade Máxima</string>
    <string name="qtd_glass">200 ml</string>
    <string name="qtd_half_glass">100 ml</string>
    <string name="qtd_cup">250 ml</string>
    <string name="qtd_half_cup">125 ml</string>
    <string name="qtd_requeijao_glass">250 ml</string>
    <string name="qtd_half_requeijao_glass">125 ml</string>
    <string name="qtd_chalice">135 ml</string>

    <!--TELA EXERCICIOS-->
    <string name="exercise_screen_title">Atividades Físicas</string>
    <string name="exercise_symptoms_title">Sintomas</string>

    <!--TELA LISTA PACIENTES-->
    <string name="add_patient">Cadastrar Paciente</string>
    <string name="cpf_label">CPF:</string>
    <string name="adress_label">Endereço:</string>
    <string name="birthdate_label">Data de nascimento:</string>
    <string name="btn_disassociate_patient">Dissociar</string>
    <string name="btn_open_patient">Abrir</string>

    <!--TELAS PRESCREVER-->
    <string name="food_prescription_label">Prescrição</string>
    <string name="food_prescription_unit">mL/dia</string>
    <string name="frequency_label">Frequência</string>
    <string name="frequency_unit">vezes ao dia</string>
    <string name="startDate_label">Data inicial</string>
    <string name="finishDate_label">Data final</string>
    <string name="startHour_label">Hora inicial</string>
    <string name="appointment_history_old">Consultas passadas</string>
    <string name="appointment_history_current">Consultas Futuras</string>
    <string name="appointment_date_label">Data da consulta</string>
    <string name="appointment_hour_label">Hora da consulta</string>
    <string name="exercise_prescription_label">Atividade física</string>
    <string name="exercise_intensity_label">Intensidade</string>
    <string name="exercise_duration_label">Duração</string>
    <string name="exercise_duration_unit">min</string>
    <string name="medicine_name_label">Nome do medicamento</string>
    <string name="medicine_dosage_label">Dosagem</string>
    <string name="medicine_note_label">Observação</string>
    <string name="medicine_quantity_label">Quantidade</string>
    <string name="medicine_history_old">Medicamentos antigos</string>
    <string name="medicine_history_current">Medicamentos atuais</string>

    <string name="liquid_history_old">Recomendações antigas</string>
    <string name="liquid_history_current">Recomendações atuais</string>

    <!--TELA SOBRE-->
    <string name="about_fragment_title">Sobre</string>
    <string name="about_fragment_text">\n\u0009Card.IO é um aplicativo para monitoramento de pacientes com Insuficiência Cardíaca Crônica,
        acompanhados em um Programa de Extensão da Univerdade Federal Fluminense,
        denominado Clínica de Insuficiência Cardíaca Coração Valente.
        \n\u0009Este aplicativo tem como objetivo estimular o paciente a realizar mudanças de comportamento favorecendo o
        contato direto com a equipe de saúde que o acompanha.
        \n\n
        \u0009Desenvolvido como projeto de Doutorado da Enfermeira Lyvia da Silva Figueiredo.</string>
    <string name="contributors_title">Colaboradores</string>
    <string name="idealizers_title">Idealizadoras</string>
    <string name="developers_title">Desenvolvedores</string>
    <string name="designer_title">Design de ícones</string>

    <string name="contributor_lyvia">\ - Enfermeira Doutoranda Lyvia da Silva Figueiredo
            \n\u0009(Pós Graduação em Ciências Cardiovasculares/UFF)</string>

    <string name="designer_danilo">\n - Danilo Corrêa
            \n\u0009(Escola de Enfermagem/UFF)</string>

    <!-- Tela Adicionar Ação de medicamento -->
    <string name="medicine_performed_hour">Horário</string>
    <string name="medicine_performed_date">Data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
