<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/grey_round_edge_shape"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp">

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                layout="@layout/content_pesagem_titulo"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeightScreenLabel"
                    android:text="@string/swelling_rg_title"
                    android:layout_marginBottom="5dp"/>
                <RadioGroup
                    android:id="@+id/rg_inchaco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_nenhum_inchaco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/no_swelling_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_pouco_inchaco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/little_swelling_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_medio_inchaco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/medium_swelling_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_muito_inchaco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/much_swelling_rg_opt"/>
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/WeightScreenLabel"
                    android:text="@string/fatigue_rg_title"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="5dp"/>
                <RadioGroup
                    android:id="@+id/rg_fadiga"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_nenhuma_fadiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/no_fatigue_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_pouca_fadiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/little_fatigue_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_media_fadiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/medium_fatigue_rg_opt"/>
                    <RadioButton
                        android:id="@+id/radio_muita_fadiga"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/WeightRadioGroupOptions"
                        android:text="@string/much_fatigue_rg_opt"/>
                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SaveButton"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>