<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/grey_round_edge_shape"
            android:layout_marginTop="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp">

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                layout="@layout/content_about_title"/>

            <TextView
                android:id="@+id/tv_about_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_fragment_text"/>

            <!--<WebView-->
                <!--android:id="@+id/wbAbout"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:layout_height="wrap_content"/>-->

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                layout="@layout/content_contributors_title" />

            <TextView
                android:id="@+id/tv_contiburtors_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idealizers_title"
                style="@style/TextSubtitle"
                android:paddingTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextContent"
                android:textStyle="bold"
                android:text="@string/contributor_lyvia"/>
            <TextView
                android:id="@+id/tv_contiburtors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_developers_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developers_title"
                style="@style/TextSubtitle"
                android:paddingTop="10dp"/>
            <TextView
                android:id="@+id/tv_developers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_designer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designer_title"
                style="@style/TextSubtitle"
                android:paddingTop="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/designer_danilo"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>