<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_expandable_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Maura"
        style="@style/TextTitle"
        />

    <include layout="@layout/separator"/>

    <LinearLayout
        android:id="@+id/ll_expandable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cpf_label"
                android:layout_gravity="left"
                style="@style/TextSubtitle"/>
            <TextView
                android:id="@+id/tv_cpf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="123.123.123-12"
                android:layout_marginStart="10dp"
                style="@style/TextContent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adress_label"
                android:layout_gravity="left"
                style="@style/TextSubtitle"/>
            <TextView
                android:id="@+id/tv_adress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Teste"
                android:layout_marginStart="10dp"
                style="@style/TextContent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate_label"
                android:layout_gravity="left"
                style="@style/TextSubtitle"/>
            <TextView
                android:id="@+id/tv_birthdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10/10/10"
                android:layout_marginStart="10dp"
                style="@style/TextContent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp">
            <Button
                android:id="@+id/btn_disassociate_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_disassociate_patient"
                style="@style/SaveButton"/>
            <Button
                android:id="@+id/btn_edit_patient"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_open_patient"
                style="@style/SaveButton"
                />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/separator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>

</LinearLayout>