<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_controle_peso"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_corpo"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight_control_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_alimentacao"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_talheres"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alimentation_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_medicacoes"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_medicamentos"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medicines_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_consultas"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_consultas"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medical_appointment_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/ll_exercicios"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_halter"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exercises_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sobre"
            android:layout_width="@dimen/ll_home_largura"
            android:layout_height="@dimen/ll_home_altura"
            android:orientation="vertical"
            android:background="@drawable/white_button_riple_effect"
            android:padding="@dimen/padding_icone_home"
            android:layout_margin="@dimen/margem_icone_homme">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ico_sinais_biologicos"
                android:layout_gravity="center_horizontal"/>
            <TextView
                style="@style/HomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_title"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
